--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -1,7 +1,7 @@
 {
 	"GLOBAL": {
 		"LANG": "ko_KR",
-		"GPL": "<div style='color: #666;'>플러스끄투 Copyright (C) 2021~ Morem.ME (support@morem.me)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/Plus-Platforms/KKuTu'>확인하기</a></div>",
+		"GPL": "<div style='color: #666;'>플러스끄투 Copyright (C) 2021~ Plus KKuTu Team (support@kkutu.plus)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/Plus-Platforms/KKuTu'>확인하기</a></div>",
 
 		"CREATOR":	"개발자 블로그",
 		"HOME":		"FA{home}",
@@ -219,7 +219,7 @@
 		"error_440": "손님, 본인 확인이 되지 않은 회원 및 만 16세 미만의 청소년은 오전 0시부터 오전 6시까지 게임 이용이 제한됩니다.",
 		"error_441": "회원님의 생년월일 정보를 읽을 수 없습니다. 로그인된 계정의 생년월일 정보가 공개되어 있는지 확인하신 뒤 끄투에서 다시 로그인해 보세요. 본인 확인이 끝나면 생년월일 정보를 숨겨도 됩니다.",
 		"error_442": "5분 이상 응답이 없어 채널과의 연결이 종료되었습니다.",
-		"error_443": "안녕하세요, Morem.ME입니다. 이 계정으로의 채팅 제재가 진행되어 채팅 입력이 제한되었습니다. 자세한 제재 사유 및 제재 내역은 플러스끄투 공식 카페나 디스코드에서 확인 가능하므로 이를 참고해주시기 바라며, 이의가 있으실 경우 support@morem.me로 항소하시면 면밀히 재검토 하겠습니다.",
+		"error_443": "안녕하세요, Plus KKuTu Team입니다. 이 계정으로의 채팅 제재가 진행되어 채팅 입력이 제한되었습니다. 자세한 제재 사유 및 제재 내역은 플러스끄투 공식 카페나 디스코드에서 확인 가능하므로 이를 참고해주시기 바라며, 이의가 있으실 경우 support@kkutu.plus로 항소하시면 면밀히 재검토 하겠습니다.",
 		"error_444": "관리자에 의해 해당 계정으로의 게임 이용이 제한되었습니다.\n제한 사유: ",
 		"error_445": "본인 확인에 성공했습니다. 끄투를 이용해 주셔서 감사합니다.",
 		"error_446": "관리자에 의해 해당 IP 주소로의 게임 이용이 제한되었습니다.\n제한 사유: ",
@@ -740,6 +740,9 @@
 		"couponUse": "쿠폰 사용",
 		"couponUseText": "<strong>쿠폰 사용 시 확인하세요!</strong><br>- 쿠폰은 계정당 1회만 사용 가능합니다.<br>- 쿠폰에 사용 제한 횟수가 있는 경우, 사용이 불가능할 수 있습니다.<br>- 기한이 지난 쿠폰은 사용할 수 없습니다.",
 
+		"securityCode": "보안 코드",
+		"securityCodeText": "<strong>보안 코드는 계정 마이그레이션 절차에서 사용됩니다</strong><br>자세한 내용은 Phase UP 업데이트에서 공개될 예정입니다.<br>제3자가 이 코드를 알게 되면 계정이 탈취될 수 있으니 주의하세요.",
+
 		"mvpPurchase": "MVP권 구매하기",
 		"officialSNS": "공식 커뮤니티", 
 		
@@ -801,6 +804,7 @@
 		"chatWarn": "로비에서의 친목성 채팅은 제재 대상입니다. 자유로운 채팅은 귓속말 또는 방을 생성하여 이용해주세요.",
 		"emojiInfo": "스티커 기능 사용이 가능합니다. 사용 가능 스티커: ",
 		"chatHottime": "🔥 19시부터 0시는 핫타임! 2배의 XP를 받아보세요.",
+		"chatIOMigration": "<strong>끄투리오와 플러스끄투가 하나 됩니다!</strong> 끄투리오로 계정을 이동하려면 보안 코드가 필요합니다. 프로필 -> 보안 코드에서 보안 코드를 확인하세요.",
 		"addictionWarning1": "게임을 플레이한지 ",
 		"addictionWarning2": "시간이 지났습니다. 과도한 게임 이용은 일상생활에 지장을 줄 수 있습니다. 이 게임물은 전체이용가입니다.",
 
