--- a/Server/lib/Web/lang/ja_JP.json
+++ b/Server/lib/Web/lang/ja_JP.json
@@ -1,6 +1,6 @@
 {
 	"GLOBAL": {
-		"GPL": "<div style='color: #666;'>+クトゥ 著作権 (C) 2021~ Morem.ME (support@morem.me)<br>このプログラムは製品に対するいかなる形式の保証も提供されません。<br>このプログラムはフリーソフトウェアであり、配布規定を満たす条件下で自由に再配布できます。<br>詳細については、このプログラムの実装を含む次のリポジトリをご確認ください: <a target='_blank' href='https://github.com/10kwon/KKuTu'>確認する</a></div>",
+		"GPL": "<div style='color: #666;'>+クトゥ 著作権 (C) 2021~ Plus KKuTu Team (support@kkutu.plus)<br>このプログラムは製品に対するいかなる形式の保証も提供されません。<br>このプログラムはフリーソフトウェアであり、配布規定を満たす条件下で自由に再配布できます。<br>詳細については、このプログラムの実装を含む次のリポジトリをご確認ください: <a target='_blank' href='https://github.com/10kwon/KKuTu'>確認する</a></div>",
 		"CREATOR": "開発者のブログ",
 		"HOME": "FA{home}",
 		"GAMES": "ゲーム",
@@ -202,7 +202,7 @@
 		"error_440": "손님, 본인 확인이 되지 않은 회원 및 만 16세 미만의 청소년은 오전 0시부터 오전 6시까지 게임 이용이 제한됩니다.",
 		"error_441": "회원님의 생년월일 정보를 읽을 수 없습니다. 로그인된 계정의 생년월일 정보가 공개되어 있는지 확인하신 뒤 끄투에서 다시 로그인해 보세요. 본인 확인이 끝나면 생년월일 정보를 숨겨도 됩니다.",
 		"error_442": "5분 이상 응답이 없어 서버와의 연결이 종료되었습니다.",
-		"error_443": "안녕하세요, Morem.ME입니다. 이 계정으로의 채팅 제재가 진행되어 채팅 입력이 제한되었습니다. 자세한 제재 사유 및 제재 내역은 플러스끄투 공식 카페나 디스코드에서 확인 가능하므로 이를 참고해주시기 바라며, 이의가 있으실 경우 support@morem.me로 항소하시면 면밀히 재검토 하겠습니다.",
+		"error_443": "안녕하세요, Plus KKuTu Team입니다. 이 계정으로의 채팅 제재가 진행되어 채팅 입력이 제한되었습니다. 자세한 제재 사유 및 제재 내역은 플러스끄투 공식 카페나 디스코드에서 확인 가능하므로 이를 참고해주시기 바라며, 이의가 있으실 경우 support@kkutu.plus로 항소하시면 면밀히 재검토 하겠습니다.",
 		"error_444": "관리자에 의해 해당 계정으로의 게임 이용이 제한되었습니다.\n제한 사유: ",
 		"error_445": "본인 확인에 성공했습니다. 끄투를 이용해 주셔서 감사합니다.",
 		"error_446": "관리자에 의해 해당 IP 주소로의 게임 이용이 제한되었습니다.\n제한 사유: ",
